# ----------------------------------------------------------------------------
#  CMake file for samples. See root CMakeLists.txt 
#
# ----------------------------------------------------------------------------

add_subdirectory(VideoSocket)
add_subdirectory(MotionDetector)
add_subdirectory(DeviceEnumerator)
#add_subdirectory(WaveformOutput)
