# ----------------------------------------------------------------------------
#  CMake file for samples. See root CMakeLists.txt 
#
# ----------------------------------------------------------------------------

add_subdirectory(DeviceEnumerator)
if(BUILD_ALPHA)
  #add_subdirectory(WaveformOutput)
endif()
