# ----------------------------------------------------------------------------
#  CMake file for samples. See root CMakeLists.txt 
#
# ----------------------------------------------------------------------------

if(BUILD_ALPHA)
  add_subdirectory(TURNServer)
  add_subdirectory(TURNMediaProvider)
endif()

