# ----------------------------------------------------------------------------
#  CMake file for samples. See root CMakeLists.txt 
#
# ----------------------------------------------------------------------------

if(BUILD_ALPHA)
  add_subdirectory(turnmediaprovider)
endif()
add_subdirectory(turnserver)

